force-app/main/default/objects/Contact/fields/UniqueEmail__c.field-meta.xml
<CustomField>
    <fullName>UniqueEmail__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>X_UniqueEmail</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>