force-app/main/default/objects/Contact/fields/UniqueID__c.field-meta.xml
<CustomField>
    <fullName>UniqueID__c</fullName>
    <label>UniqueID</label>
    <length>9</length>
    <type>Text</type>
</CustomField>