force-app/main/default/objects/Contact/fields/UniqueIdType__c.field-meta.xml
<CustomField>
    <fullName>UniqueIdType__c</fullName>
    <label>X_UniqueIdType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>