force-app/main/default/objects/Contact/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <label>X_User Name</label>
    <type>Email</type>
</CustomField>