force-app/main/default/objects/Contact/fields/UserProfile__c.field-meta.xml
<CustomField>
    <fullName>UserProfile__c</fullName>
    <description>Used for GOVSBIR</description>
    <formula>IF( UserReference__r.Profile.Name = &apos;PM&apos;, &apos;Program Manager&apos;, 
  IF( UserReference__r.Profile.Name = &apos;PO&apos;, &apos;Program Officer &apos;, 
    IF( UserReference__r.Profile.Name = &apos;FO&apos;, &apos;Fiscal Officer &apos;, 
      IF( UserReference__r.Profile.Name = &apos;FS&apos;, &apos;Fiscal Staff&apos;, 
        IF( UserReference__r.Profile.Name = &apos;FS&apos;, &apos;Financial Director &apos;,
          IF( UserReference__r.Profile.Name = &apos;FD&apos;, &apos;Fiscal Staff&apos;,
            IF( UserReference__r.Profile.Name = &apos;EXE&apos;, &apos;Executive&apos;,
              IF( UserReference__r.Profile.Name = &apos;SME&apos;, &apos;Subject Matter Expert Expert&apos;,
                IF( UserReference__r.Profile.Name = &apos;FS&apos;, &apos;Fiscal Staff&apos;,
                  IF( UserReference__r.Profile.Name = &apos;DA&apos;, &apos;Delegated Administrator&apos;,
                    IF( UserReference__r.Profile.Name = &apos;IND&apos;, &apos;Individual Subrecipient&apos;,
                      IF( UserReference__r.Profile.Name = &apos;SPI&apos;, &apos;Primary Representative&apos;,
                        IF( UserReference__r.Profile.Name = &apos;SPA&apos;, &apos;Secondary Representative&apos;,
                          IF( UserReference__r.Profile.Name = &apos;VND&apos;, &apos;Vendor&apos;,
&apos;&apos;))))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Profile</label>
    <type>Text</type>
</CustomField>