force-app/main/default/objects/Contact/fields/UserReference__c.field-meta.xml
<CustomField>
    <fullName>UserReference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This filed will hold information of the User object to which it is referenced. A batch job will then use this field information to map its corresponding User</description>
    <label>X_UserReference</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>