force-app/main/default/objects/Contact/fields/UserRegistered__c.field-meta.xml
<CustomField>
    <fullName>UserRegistered__c</fullName>
    <description>This field is used to disable the send Invitation button</description>
    <formula>IF(  ISPICKVAL(ReviewerStatus__c, &quot;Registered&quot;) , True, False)</formula>
    <label>X_User Registered</label>
    <type>Checkbox</type>
</CustomField>