force-app/main/default/objects/Contact/fields/UserRoleFormula__c.field-meta.xml
<CustomField>
    <fullName>UserRoleFormula__c</fullName>
    <description>This Formula needs to be updated 

Vinayak Sharma 11/20/2015
swati singh - updated the logic 4/13/2016</description>
    <formula>IF( ISPICKVAL( UserRole__c ,&apos;Primary&apos;) ,&apos;Primary Applicant&apos;, IF(ISPICKVAL( UserRole__c ,&apos;Secondary&apos;),&apos;Secondary Applicant&apos;,&apos;External Reviewer&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_User Role</label>
    <type>Text</type>
</CustomField>