force-app/main/default/objects/Contact/fields/X4DigitZipCodeExtension__c.field-meta.xml
<CustomField>
    <fullName>X4DigitZipCodeExtension__c</fullName>
    <description>Created this field for Address Field user story
Used for GOSBIR</description>
    <label>4-Digit Zip Code Extension</label>
    <length>4</length>
    <type>Text</type>
</CustomField>