force-app/main/default/objects/Contact/validationRules/CityAlphabetic_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>CityAlphabetic_Value</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( MailingCity ,&quot;^[a-z A-Z]*$&quot;))</errorConditionFormula>
    <errorMessage>Please enter alphabetic character in the City field.</errorMessage>
</ValidationRule>