force-app/main/default/objects/Contact/validationRules/CountryAlphabetic_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>CountryAlphabetic_Value</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( MailingCountry ,&quot;^[a-z A-Z]*$&quot;))</errorConditionFormula>
    <errorMessage>Please enter alphabetic character in the Country field.</errorMessage>
</ValidationRule>