force-app/main/default/objects/Contact/validationRules/CountyAlphabetic_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>CountyAlphabetic_Value</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( County__c ,&quot;^[a-z  A-Z ’]*$&quot;))</errorConditionFormula>
    <errorMessage>Please enter alphabetic character in the County field.</errorMessage>
</ValidationRule>