force-app/main/default/objects/Contact/validationRules/MobilePhoneValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>MobilePhoneValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(MobilePhone) ), NOT(REGEX(MobilePhone, &quot;^((\\+1)?\\s?\\(\\d{3}\\)\\s?\\d{3}\\-\\d{4})?$&quot;)))</errorConditionFormula>
    <errorMessage>Please enter valid Mobile Phone Number.</errorMessage>
</ValidationRule>