force-app/main/default/objects/Contact/validationRules/PhoneValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>PhoneValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Phone) ), NOT(REGEX(Phone, &quot;^((\\+1)?\\s?\\(\\d{3}\\)\\s?\\d{3}\\-\\d{4})?$&quot;)))</errorConditionFormula>
    <errorMessage>Please enter valid Phone Number.</errorMessage>
</ValidationRule>