force-app/main/default/objects/Contact/validationRules/Validate_CongressionalDistrict.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_CongressionalDistrict</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(CongressionalDistrict__c)),
OR(
NOT(REGEX(CongressionalDistrict__c,&quot;^[0-9]*$&quot;)),
LEN(CongressionalDistrict__c) != 3
))</errorConditionFormula>
    <errorMessage>Enter 3-digit numeric value for Congressional District field</errorMessage>
</ValidationRule>