force-app/main/default/objects/Contact/validationRules/Validate_Zip_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Zip_Code</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISBLANK(MailingPostalCode)) , 
OR(LEN(MailingPostalCode) != 5, NOT(ISNUMBER(MailingPostalCode))) 
)</errorConditionFormula>
    <errorMessage>Please Enter 5 Digit Zip Code</errorMessage>
</ValidationRule>