force-app/main/default/objects/Contact/validationRules/X4_digit_zip_code_extension.validationRule-meta.xml
<ValidationRule>
    <fullName>X4_digit_zip_code_extension</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(X4DigitZipCodeExtension__c)),
OR(
NOT(ISNUMBER(X4DigitZipCodeExtension__c)),
LEN(X4DigitZipCodeExtension__c) != 4
)
)</errorConditionFormula>
    <errorMessage>Please Enter 4 Digit Zip Code Extension.</errorMessage>
</ValidationRule>